@@ -3,6 +3,7 @@ package com.alessiodp.libby.classloader;
 import com.alessiodp.libby.Library;
 import com.alessiodp.libby.LibraryManager;
 import com.alessiodp.libby.Repositories;
+import com.alessiodp.libby.logging.Logger;
 import org.jetbrains.annotations.NotNull;
 import sun.misc.Unsafe;
 
@@ -26,14 +27,54 @@ import static java.util.Objects.requireNonNull;
  */
 public abstract class ClassLoaderHelper {
     /**
+     * System property to set to "true" to disable the Unsafe method for initializing the class loader helper.
+     */
+    public static final String SYSTEM_PROPERTY_DISABLE_UNSAFE = "libby.classloaders.unsafeDisabled";
+
+    /**
+     * System property to set to "true" to disable the Java agent method for initializing the class loader helper.
+     */
+    public static final String SYSTEM_PROPERTY_DISABLE_JAVA_AGENT = "libby.classloaders.javaAgentDisabled";
+
+    /**
+     * Environment variable to set to "true" to disable the Unsafe method for initializing the class loader helper.
+     */
+    public static final String ENV_VAR_DISABLE_UNSAFE = "LIBBY_CLASSLOADERS_UNSAFE_DISABLED";
+
+    /**
+     * Environment variable to set to "true" to disable the Java agent method for initializing the class loader helper.
+     */
+    public static final String ENV_VAR_DISABLE_JAVA_AGENT = "LIBBY_CLASSLOADERS_JAVA_AGENT_DISABLED";
+
+    /**
      * net.bytebuddy.agent.ByteBuddyAgent class name for reflections
      */
     private static final String BYTE_BUDDY_AGENT_CLASS = replaceWithDots("net{}bytebuddy{}agent{}ByteBuddyAgent");
 
     /**
+     * java.lang.Module methods since we build against Java 8
+     */
+    private static final Method getModuleMethod, addOpensMethod, getNameMethod;
+
+    static {
+        Method getModule = null, addOpens = null, getName = null;
+        try {
+            Class<?> moduleClass = Class.forName("java.lang.Module");
+            getModule = Class.class.getMethod("getModule");
+            addOpens = moduleClass.getMethod("addOpens", String.class, moduleClass);
+            getName = moduleClass.getMethod("getName");
+        } catch (Exception ignored) {
+        } finally {
+            getModuleMethod = getModule;
+            addOpensMethod = addOpens;
+            getNameMethod = getName;
+        }
+    }
+
+    /**
      * Unsafe class instance. Used in {@link #getPrivilegedMethodHandle(Method)}.
      */
-    protected static final Unsafe theUnsafe;
+    private static final Unsafe theUnsafe;
 
     static {
         Unsafe unsafe = null; // Used to make theUnsafe field final
@@ -50,6 +91,11 @@ public abstract class ClassLoaderHelper {
         }
         theUnsafe = unsafe;
     }
+
+    /**
+     * Cached {@link Instrumentation} instance. Used by {@link #initInstrumentation(LibraryManager)}.
+     */
+    private static volatile Instrumentation cachedInstrumentation;
 
     /**
      * The class loader being managed by this helper.
@@ -86,6 +132,126 @@ public abstract class ClassLoaderHelper {
     }
 
     /**
+     * Sets the method accessible using reflections, the Unsafe class or a java agent loaded at runtime.
+     * <p>The provided consumers are mutually exclusive, i.e. only 1 of the provided consumers will run (if run).
+     *
+     * @param libraryManager the {@link LibraryManager}
+     * @param method the method to set accessible
+     * @param methodSignature the signature of the method, used in error messages
+     * @param methodHandleConsumer a {@link Consumer} which might get called with a {@link MethodHandle} to the method
+     * @param instrumentationConsumer a {@link Consumer} which might get called with an {@link Instrumentation} instance
+     */
+    protected void setMethodAccessible(LibraryManager libraryManager, Method method, String methodSignature, Consumer<MethodHandle> methodHandleConsumer, Consumer<Instrumentation> instrumentationConsumer) {
+        if (Modifier.isPublic(method.getModifiers())) {
+            return; // Already public
+        }
+
+        try {
+            // Try to open the method's module to avoid warnings
+            openModule(method.getDeclaringClass());
+        } catch (Exception ignored) {}
+
+        try {
+            // In Java 8 calling setAccessible(true) is enough
+            method.setAccessible(true);
+            return;
+        } catch (Exception e) {
+            handleInaccessibleObjectException(e, methodSignature);
+        }
+
+        Exception unsafeException = null; // Used below in error messages handling
+        unsafe: if (theUnsafe != null && canUseUnsafe()) {
+            MethodHandle methodHandle;
+            try {
+                methodHandle = getPrivilegedMethodHandle(method).bindTo(classLoader);
+            } catch (Exception e) {
+                unsafeException = e; // Save exception for later
+                break unsafe; // An exception occurred, don't continue
+            }
+            methodHandleConsumer.accept(methodHandle);
+            return;
+        }
+
+        Exception javaAgentException = null; // Used below in error messages handling
+        javaAgent: if (canUseJavaAgent()) {
+            Instrumentation instrumentation;
+            try {
+                instrumentation = initInstrumentation(libraryManager);
+            } catch (Exception e) {
+                javaAgentException = e; // Save exception for later
+                break javaAgent; // An exception occurred, don't continue
+            }
+            try {
+                // instrumentationConsumer might try to set the method accessible
+                instrumentationConsumer.accept(instrumentation);
+                return;
+            } catch (Exception e) {
+                handleInaccessibleObjectException(e, methodSignature);
+            }
+        }
+
+        // Couldn't init, print errors and throw a RuntimeException
+        Logger logger = libraryManager.getLogger();
+        if (unsafeException != null) {
+            logger.error("Cannot set accessible " + methodSignature + " using unsafe", unsafeException);
+        }
+        if (javaAgentException != null) {
+            logger.error("Cannot set accessible " + methodSignature + " using java agent", javaAgentException);
+        }
+
+        String packageName = method.getDeclaringClass().getPackage().getName();
+        String moduleName = null;
+        try {
+            moduleName = (String) getNameMethod.invoke(getModuleMethod.invoke(method.getDeclaringClass()));
+        } catch (Exception ignored) {
+            // Don't throw an exception in case module reflections failed
+        }
+        if (moduleName != null) {
+            logger.error("Cannot set accessible " + methodSignature + ", if you are using Java 9+ try to add the following option to your java command: --add-opens " + moduleName + "/" + packageName + "=ALL-UNNAMED");
+        } else {
+            // In case the try-and-catch above failed, should never happen
+            logger.error("Cannot set accessible " + methodSignature);
+        }
+
+        throw new RuntimeException("Cannot set accessible " + methodSignature);
+    }
+
+    private void handleInaccessibleObjectException(Exception exception, String methodSignature) {
+        // InaccessibleObjectException has been added in Java 9
+        if (!exception.getClass().getName().equals("java.lang.reflect.InaccessibleObjectException")) {
+            throw new RuntimeException("Cannot set accessible "+ methodSignature, exception);
+        }
+    }
+
+    /**
+     * Opens the module of the provided class using reflections.
+     *
+     * @param toOpen The class
+     * @throws Exception if an error occurs
+     */
+    protected static void openModule(Class<?> toOpen) throws Exception {
+        //
+        // Snippet originally from lucko (Luck) <luck@lucko.me>, who used it in his own class loader
+        //
+        // This is a workaround used to maintain Java 9+ support with reflections
+        // Thanks to this you will be able to run this class loader with Java 8+
+
+        // This is effectively calling:
+        //
+        // toOpen.getModule().addOpens(
+        //     toOpen.getPackage().getName(),
+        //     ClassLoaderHelper.class.getModule()
+        // );
+        //
+        // We use reflection since we build against Java 8.
+
+        Object urlClassLoaderModule = getModuleMethod.invoke(toOpen);
+        Object thisModule = getModuleMethod.invoke(ClassLoaderHelper.class);
+
+        addOpensMethod.invoke(urlClassLoaderModule, toOpen.getPackage().getName(), thisModule);
+    }
+
+    /**
      * Try to get a MethodHandle for the given method.
      *
      * @param method the method to get the handle for
@@ -113,13 +279,18 @@ public abstract class ClassLoaderHelper {
     }
 
     /**
-     * Load ByteBuddy agent and pass an Instrumentation instance to the consumer.
+     * Load ByteBuddy agent and return an {@link Instrumentation} instance.
      *
      * @param libraryManager the library manager used to download dependencies
-     * @param consumer the consumer to pass the Instrumentation instance to
+     * @return an {@link Instrumentation} instance
      * @throws Exception if an error occurs
      */
-    protected void initInstrumentation(LibraryManager libraryManager, Consumer<Instrumentation> consumer) throws Exception {
+    protected Instrumentation initInstrumentation(LibraryManager libraryManager) throws Exception {
+        Instrumentation instr = cachedInstrumentation;
+        if (instr != null) {
+            return instr;
+        }
+
         // To open the class-loader's module we need permissions.
         // Try to add a java agent at runtime (specifically, ByteBuddy's agent) and use it to open the module,
         // since java agents should have such permission.
@@ -142,16 +313,38 @@ public abstract class ClassLoaderHelper {
             // This is effectively calling:
             //
             // Instrumentation instrumentation = ByteBuddyAgent.install();
-            // consumer.accept(instrumentation);
             //
             // For more information see https://docs.oracle.com/javase/8/docs/api/java/lang/instrument/Instrumentation.html
 
             Instrumentation instrumentation = (Instrumentation) byteBuddyAgent.getMethod("install").invoke(null);
-            consumer.accept(instrumentation);
+            cachedInstrumentation = instrumentation;
+            return instrumentation;
         } finally {
             try {
                 isolatedClassLoader.close();
             } catch (Exception ignored) {}
         }
+    }
+
+    /**
+     * Checks if the Unsafe method can be used to initialize the class loader helper.
+     *
+     * @return {@code true} if either the system property {@link #SYSTEM_PROPERTY_DISABLE_UNSAFE} or the environment
+     *         variable {@link #ENV_VAR_DISABLE_UNSAFE} are set to {@code "true"}, {@code false} otherwise.
+     * @see #setMethodAccessible(LibraryManager, Method, String, Consumer, Consumer)
+     */
+    protected boolean canUseUnsafe() {
+        return !Boolean.parseBoolean(System.getProperty(SYSTEM_PROPERTY_DISABLE_UNSAFE)) && !Boolean.parseBoolean(System.getenv(ENV_VAR_DISABLE_UNSAFE));
+    }
+
+    /**
+     * Checks if the Java agent method can be used to initialize the class loader helper.
+     *
+     * @return {@code true} if either the system property {@link #SYSTEM_PROPERTY_DISABLE_JAVA_AGENT} or the environment
+     *         variable {@link #ENV_VAR_DISABLE_JAVA_AGENT} are set to {@code "true"}, {@code false} otherwise.
+     * @see #setMethodAccessible(LibraryManager, Method, String, Consumer, Consumer)
+     */
+    protected boolean canUseJavaAgent() {
+        return !Boolean.parseBoolean(System.getProperty(SYSTEM_PROPERTY_DISABLE_JAVA_AGENT)) && !Boolean.parseBoolean(System.getenv(ENV_VAR_DISABLE_JAVA_AGENT));
     }
 }
