@@ -28,7 +28,7 @@ public class URLClassLoaderHelper extends ClassLoaderHelper {
     /**
      * Creates a new URL class loader helper.
      *
-     * @param classLoader    the class loader to manage
+     * @param classLoader the class loader to manage
      * @param libraryManager the library manager used to download dependencies
      */
     public URLClassLoaderHelper(@NotNull URLClassLoader classLoader, @NotNull LibraryManager libraryManager) {
@@ -37,39 +37,20 @@ public class URLClassLoaderHelper extends ClassLoaderHelper {
 
         try {
             Method addURLMethod = URLClassLoader.class.getDeclaredMethod("addURL", URL.class);
-
-            try {
-                openUrlClassLoaderModule();
-            } catch (Exception ignored) {}
-
-            try {
-                addURLMethod.setAccessible(true);
-            } catch (Exception exception) {
-                // InaccessibleObjectException has been added in Java 9
-                if (exception.getClass().getName().equals("java.lang.reflect.InaccessibleObjectException")) {
-                    // It is Java 9+, try to open java.net package
-                    if (theUnsafe != null) {
-                        try {
-                            addURLMethodHandle = getPrivilegedMethodHandle(addURLMethod).bindTo(classLoader);
-                            return; // We're done
-                        } catch (Exception ignored) {}
-                    }
-                    // Cannot use privileged MethodHandles.Lookup, trying with java agent
-                    try {
-                        initInstrumentation(libraryManager, this::addOpensWithAgent);
+            setMethodAccessible(libraryManager, addURLMethod, "URLClassLoader#addURL(URL)",
+                    methodHandle -> {
+                        addURLMethodHandle = methodHandle;
+                    },
+                    instrumentation -> {
+                        addOpensWithAgent(instrumentation);
                         addURLMethod.setAccessible(true);
-                    } catch (Exception e) {
-                        // Cannot access at all
-                        libraryManager.getLogger().error("Cannot access URLClassLoader#addURL(URL), if you are using Java 9+ try to add the following option to your java command: --add-opens java.base/java.net=ALL-UNNAMED");
-                        throw new RuntimeException("Cannot access URLClassLoader#addURL(URL)", e);
                     }
-                } else {
-                    throw new RuntimeException("Cannot set accessible URLClassLoader#addURL(URL)", exception);
-                }
+            );
+            if (addURLMethodHandle == null) {
+                addURLMethodHandle = MethodHandles.lookup().unreflect(addURLMethod).bindTo(classLoader);
             }
-            addURLMethodHandle = MethodHandles.lookup().unreflect(addURLMethod).bindTo(classLoader);
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("Couldn't initialize URLClassLoaderHelper", e);
         }
     }
 
@@ -80,32 +61,6 @@ public class URLClassLoaderHelper extends ClassLoaderHelper {
         } catch (Throwable e) {
             throw new RuntimeException(e);
         }
-    }
-
-    private static void openUrlClassLoaderModule() throws Exception {
-        //
-        // Thanks to lucko (Luck) <luck@lucko.me> for this snippet used in his own class loader
-        //
-        // This is a workaround used to maintain Java 9+ support with reflections
-        // Thanks to this you will be able to run this class loader with Java 8+
-
-        // This is effectively calling:
-        //
-        // URLClassLoader.class.getModule().addOpens(
-        //     URLClassLoader.class.getPackageName(),
-        //     URLClassLoaderHelper.class.getModule()
-        // );
-        //
-        // We use reflection since we build against Java 8.
-
-        Class<?> moduleClass = Class.forName("java.lang.Module");
-        Method getModuleMethod = Class.class.getMethod("getModule");
-        Method addOpensMethod = moduleClass.getMethod("addOpens", String.class, moduleClass);
-
-        Object urlClassLoaderModule = getModuleMethod.invoke(URLClassLoader.class);
-        Object thisModule = getModuleMethod.invoke(URLClassLoaderHelper.class);
-
-        addOpensMethod.invoke(urlClassLoaderModule, URLClassLoader.class.getPackage().getName(), thisModule);
     }
 
     private void addOpensWithAgent(@NotNull Instrumentation instrumentation) {
